[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/create_enjinQR_request.gd" type="Script" id=2]
[ext_resource path="res://UI/Create_enjin_panel.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.243137, 0.243137, 0.243137, 1 )

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 1 )

[node name="Create_enjin_panel" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -229.0
margin_top = -300.0
margin_right = 229.0
margin_bottom = 300.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 5 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -133.0
margin_right = 133.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
text = "Link Wallet for:"

[node name="username" type="Label" parent="."]
margin_left = 187.0
margin_top = 130.0
margin_right = 262.0
margin_bottom = 166.0
custom_fonts/font = SubResource( 2 )
text = "name"

[node name="Button" type="Button" parent="."]
margin_left = 179.0
margin_top = 229.0
margin_right = 262.0
margin_bottom = 283.0
custom_fonts/font = SubResource( 3 )
text = "YES"

[node name="back" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -82.0
margin_top = -54.0
margin_right = 82.0
custom_fonts/font = SubResource( 3 )
text = "BACK"

[node name="QR_request" type="HTTPRequest" parent="."]
script = ExtResource( 2 )

[node name="Qr_inage" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -170.0
margin_top = -237.0
margin_right = 180.0
margin_bottom = 113.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Qr_inage"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -37.0
margin_top = -33.0
margin_right = 3.0
margin_bottom = 3.0
grow_horizontal = 2
custom_fonts/font = SubResource( 4 )
align = 1

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="image_loaded" from="QR_request" to="." method="_on_QR_request_image_loaded"]
[connection signal="request_completed" from="QR_request" to="QR_request" method="_on_QR_request_request_completed"]
